--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.0.1",
     "mongoose-findorcreate": "^3.0.0",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
   }
 }
